tests/codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close/reader-list-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-list-missing-close
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/tests-infix-calls
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')'
;; TEST-ATOM: atom.reader.error.reader.list.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.list.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')'
;; TEST-READER-PATH: reader.c:1595 parser.list
;; TEST-CODEGEN-PATH: diagnostic.parser.list
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1595 Expected ')'
;; TEST-USES-ATOM: atom.reader.error.reader.list.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.list
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.list.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.list.missing.close
;; TEST-CLI-TARGET: codegen errors reader tests-infix-calls

(module Main)
(show (+ 1 2)
